--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "render:build": "npx tsc -P tsconfig.render.json",
+    "render:start": "node dist/render/index.js",
+    "render:dev": "concurrently \"npx tsc -P tsconfig.render.json --watch\" \"nodemon -q dist/render/index.js\"",
+    "scully": "npx scully --project=blog"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +25,12 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@scullyio/init": "^2.1.41",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.41",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs-extra": "^10.1.0",
     "rxjs": "~7.5.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,14 +38,19 @@
     "@angular-devkit/build-angular": "^14.2.10",
     "@angular/cli": "~14.2.10",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/express": "^4.17.14",
+    "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^18.11.9",
     "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.7.2"
